[package]
name = "login-v"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["unbounded_depth"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tower = "0.4"
hyper = "0.14.10"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "json", "bigdecimal", "chrono"] }
dotenv = "0.15.0"